<resources>
    <string name="app_name">Prediction App</string>
    <string name="login">Login</string>
    <string name="diabetes_prediction">Diabetes Prediction\n</string>
    <string name="heart_prediction">Heart Disease Prediction\n</string>
    <string name="prediction_btn">Prediction</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="glucose_level">Glucose Level</string>
    <string name="numbers_of_pregnancies">Numbers of Pregnancies</string>
    <string name="blood_pressure_level">Blood Pressure Level</string>
    <string name="skin_thickness_value">Skin Thickness Value</string>
    <string name="insulin_level">Insulin Level</string>
    <string name="bmi_level">BMI Level</string>
    <string name="diabetes_pedigree_function_value">Diabetes Pedigree Function Value</string>
    <string name="age_of_person">Age of Person</string>
</resources>