<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl1"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_login"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivLogin"
            app:layout_constraintBottom_toBottomOf="@id/ivLogin"
            app:layout_constraintStart_toEndOf="@id/ivLogin"
            android:layout_marginHorizontal="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/login"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/cl1">

        <ImageView
            android:id="@+id/ivDiabetes"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_diabetes"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivDiabetes"
            app:layout_constraintBottom_toBottomOf="@id/ivDiabetes"
            app:layout_constraintStart_toEndOf="@id/ivDiabetes"
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/diabetes_prediction"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl3"
        app:layout_constraintTop_toBottomOf="@id/cl2"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ibHeart"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_heart_problem"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ibHeart"
            app:layout_constraintBottom_toBottomOf="@id/ibHeart"
            app:layout_constraintStart_toEndOf="@id/ibHeart"
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/heart_prediction"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>